--- a/style-file/style.css
+++ b/style-file/style.css
@@ -18,11 +18,11 @@ a {
 @keyframes fadeIn {
   from {
       opacity: 0;
-      transform: translate(-100px, 100px); 
+      transform: translate(-100px, 100px);
   }
   to {
       opacity: 1;
-      transform: translate(0, 0); 
+      transform: translate(0, 0);
   }
 }
 
@@ -72,7 +72,6 @@ nav a {
 }
 /* -----------------------------Home ----------------------------- */
 .Home > .first-container {
- 
   background-image: linear-gradient(to right, #feba2a 92%, #fff 8%);
   border-radius: 30px;
 
@@ -178,7 +177,7 @@ nav a {
 }
 .Home > .second-container .row .position-relative:hover .position-absolute {
   display: block;
-  animation: fadeIn 0.9s ease-in-out; 
+  animation: fadeIn 0.9s ease-in-out;
   transition: opacity 0.2s, transform 0.2s;
 }
 .Home > .second-container .row .position-relative .position-absolute h2 {
@@ -200,82 +199,105 @@ nav a {
   text-align: center;
   margin: 10vh auto;
 }
-.Home > .third-container >h4{
-color: #FEBA2B;
-font-family: Montserrat;
-font-size: 20px;
-font-weight: 600;
-margin: 2vh auto;
-
-
-
+.Home > .third-container > h4 {
+  color: #feba2b;
+  font-family: Montserrat;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 2vh auto;
 }
-.Home > .third-container >h2{
- 
-font-family: Montserrat;
-font-size: 24px;
-font-weight: 700;
-line-height: 32px;
+.Home > .third-container > h2 {
+  font-family: Montserrat;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 32px;
 
-margin: 2vh auto;
-
+  margin: 2vh auto;
 }
-.Home > .third-container >p{
-color: #737373;
+.Home > .third-container > p {
+  color: #737373;
 
-font-family: Montserrat;
-font-size: 16px;
-font-weight: 500;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 500;
 
-margin: 2vh auto;
-
+  margin: 2vh auto;
 }
-.Home > .third-container>.row>.col-lg-2{
+.Home > .third-container > .row > .col-lg-2 {
   margin: 1vh auto;
-
-} 
-.Home > .third-container>.row>.col-lg-2 img{
+}
+.Home > .third-container > .row > .col-lg-2 img {
   width: 100%;
 }
-.Home > .third-container>.row>.col-lg-2 h4{
-  color: #FEBA2B;
+.Home > .third-container > .row > .col-lg-2 h4 {
+  color: #feba2b;
   font-family: Montserrat;
   font-size: 18px;
   font-weight: 600;
-margin: 1vh 0vw;
-  
-  
-  
+  margin: 1vh 0vw;
 }
-.Home > .third-container>.row>.col-lg-2 a{
+.Home > .third-container > .row > .col-lg-2 a {
   color: #737373;
 
-font-family: Montserrat;
-font-size: 14px;
-font-weight: 700;
-margin: 0.5vh;
-padding: 0;
-
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 700;
+  margin: 0.5vh;
+  padding: 0;
 }
-.Home > .third-container>.row>.col-lg-2 h6{
-  color: #BDBDBD;
+.Home > .third-container > .row > .col-lg-2 h6 {
+  color: #bdbdbd;
   margin: 1vh 0vw;
 
-font-family: Montserrat;
-font-size: 16px;
-font-weight: 700;
-line-height: 24px;
-letter-spacing: 0.10000000149011612px;
-text-align: center;
-
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.10000000149011612px;
+  text-align: center;
 }
-.Home > .third-container>.row>.col-lg-2 h6>span{
+.Home > .third-container > .row > .col-lg-2 h6 > span {
   color: #feba2a;
 }
-.Home > .third-container>a{
-  border: 2px solid #8B4513;
-color: #8B4513;
-padding: 1.5vh 1.5vw;
-font-weight: 600;
-border-radius: 10px;
+.Home > .third-container > a {
+  border: 2px solid #8b4513;
+  color: #8b4513;
+  padding: 1.5vh 1.5vw;
+  font-weight: 600;
+  border-radius: 10px;
+}
+
+.Home > .forth-container .row .d-flex {
+  align-items: center;
+  justify-content: space-between;
+}
+
+.Home > .forth-container .row img {
+  width: 100%;
+  height: 500px;
+}
+
+.Home > .forth-container .row h4 {
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #febb2a;
+}
+
+.Home > .forth-container .row h1 {
+  color: #252b42;
+  font-family: Montserrat;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 50px;
+  letter-spacing: 0.20000000298023224px;
+  text-align: left;
+}
+.Home > .forth-container .row p {
+  color: #737373;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
 }
