--- a/style-file/style.css
+++ b/style-file/style.css
@@ -382,8 +382,8 @@ text-align: center;
   
 }
 .Home > .sixth-container>.row .first-img{
-  background-image: url("../image/unsplash_75EFpyXu3Wg.png");
-  width: 50%;
+  background-image: url("../o,");
+  width: 100%;
   background-size: cover;
   height: 400px;
 }
