--- a/style-file/mobile.css
+++ b/style-file/mobile.css
@@ -114,6 +114,7 @@
     }
     .Home > .third-container > .row > .col-lg-2 img {
         width: 100%;
+        height: 200px;
     }
     .Home > .third-container > .row > .col-lg-2 h4 {
         color: #feba2b;
@@ -134,6 +135,10 @@
     }
     .Home > .fivth-container .col-sm{
 width: 50%;
+    }
+    .Home > .forth-container .col-sm-6 img{
+      height: 300px;
+      margin: auto;
     }
   
     
