--- a/style-file/tab.css
+++ b/style-file/tab.css
@@ -1,81 +1,251 @@
-@media (max-width:1024px) {
-    .top-line {
-        background: #8b4513;
-        color: white;
-        padding: 0vh ;
-      }
-      .top-line > .row > .d-flex {
-        align-items: center;
-        gap: 1vh 1vw;
-        padding: 1vh 1vw;
-        font-weight: 700;
-        font-size: 12px;
-      }
-      .top-line > .row > .d-flex a {
-        color: white;
-        font-weight: 700;
-        font-size: 12px;
-      }
+@media (max-width: 1024px) {
+  .top-line {
+      background: #8b4513;
+      color: white;
+      padding: 0vh;
+  }
+  .top-line > .row > .d-flex {
+      align-items: center;
+      gap: 1vh 1vw;
+      padding: 1vh 1vw;
+      font-weight: 700;
+      font-size: 12px;
+  }
+  .top-line > .row > .d-flex a {
+      color: white;
+      font-weight: 700;
+      font-size: 12px;
+  }
 
-      nav img{
-        width: 100px;
-        height: auto;
-      }
-      nav button{
-        border: none !important;
-        color: #000 !important;
-      }
-      
-/* -----------------------------Home ----------------------------- */
-.Home > .first-container {
-    background-image: linear-gradient(to right, #feba2a 92%,#fff 8%);
-    border-radius: 40px;
-  
-    width: 95%;
-    margin: 2vh auto;
+  nav img {
+      width: 100px;
+      height: auto;
+  }
+  nav button {
+      border: none !important;
+      color: #000 !important;
+  }
+
+  /* -----------------------------Home ----------------------------- */
+  .Home > .first-container {
+      background-image: linear-gradient(to right, #feba2a 92%, #fff 8%);
+      border-radius: 40px;
+
+      width: 95%;
+      margin: 2vh auto;
   }
   .Home > .first-container .d-flex {
-    align-items: center;
-    justify-content:start;
-    padding: 5vh 3vw;
+      align-items: center;
+      justify-content: start;
+      padding: 5vh 3vw;
   }
   .Home > .first-container .d-flex h5 {
-    font-size: 25px;
-      
+      font-size: 25px;
   }
   .Home > .first-container .d-flex h1 {
-   
-  
-    font-size: 70px;
-
+      font-size: 70px;
   }
   .Home > .first-container .d-flex p {
-    color: #fff;
-  
-    font-family: Montserrat;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 30px;
-    margin: 2vh 0vw;
+      color: #fff;
+
+      font-family: Montserrat;
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 30px;
+      margin: 2vh 0vw;
   }
   .Home > .first-container .d-flex a {
-    border: none;
-    background-color: #000;
-    color: #fff;
-    padding: 15px 40px;
-    font-weight: 600;
-    margin: 5vh 0vw;
-    gap: 10px;
-    border-radius: 5px;
+      border: none;
+      background-color: #000;
+      color: #fff;
+      padding: 15px 40px;
+      font-weight: 600;
+      margin: 5vh 0vw;
+      gap: 10px;
+      border-radius: 5px;
   }
-  
+
   .Home > .first-container .img {
-    justify-content: end;
-    padding: 0;
+      justify-content: end;
+      padding: 0;
   }
   .Home > .first-container .img > img {
-    width: 50%;
+      width: 50%;
   }
-  
-      
+
+  /* -----------------------------About Page ----------------------------- */
+  .About > .first-container {
+      margin: 2vh auto;
+  }
+
+  .About > .first-container > .row > .col-lg-6 h5 {
+      font-size: 20px;
+      margin: 1vh 0vw;
+  }
+  .About > .first-container > .row > .col-lg-6 h1 {
+      font-size: 40px;
+
+      line-height: 40px;
+      margin: 1vh 0vw;
+  }
+  .About > .first-container > .row > .col-lg-6 p {
+      font-size: 16px;
+
+      line-height: 22px;
+      margin: 1.5vh 0vw;
+  }
+  .About > .first-container > .row > .col-lg-6 a {
+      padding: 10px 30px;
+      font-weight: 600;
+
+      border-radius: 5px;
+  }
+
+  .About > .second-container {
+      margin: 50px auto;
+  }
+
+  .About > .second-container > .row > .col-lg-6 h5 {
+      font-size: 20px;
+      font-weight: 800;
+
+      margin: 2vh 0vw;
+  }
+  .About > .second-container > .row > .col-lg-6 h4 {
+      font-size: 18px;
+
+      line-height: 25px;
+  }
+  .About > .second-container > .row > .col-lg-6 p {
+      font-size: 14px;
+      font-weight: 600;
+  }
+
+  .About > .third-container {
+      margin: 50px auto;
+  }
+
+  .About > .third-container > .row > .col-lg-3 h2 {
+      font-family: Montserrat;
+      font-size: 35px;
+      font-weight: 800;
+      line-height: 60px;
+  }
+
+  .About > .third-container > .row > .col-lg-3 h6 {
+      font-family: Montserrat;
+      font-size: 15px;
+      font-weight: 700;
+  }
+
+  .About > .forth-container video {
+      border-radius: 20px;
+      width: 95%;
+  }
+
+  .About > .fivth-container {
+      margin: 100px auto;
+  }
+
+  .About > .fivth-container h1 {
+      font-family: Montserrat;
+      font-size: 40px;
+      font-weight: 700 !important;
+      color: #252b42;
+  }
+  .About > .fivth-container p {
+      font-family: Montserrat;
+      font-size: 16px;
+      font-weight: 500;
+
+      color: #737373;
+  }
+  .About > .fivth-container .col-lg-3 {
+      margin: 50px auto;
+  }
+  .About > .fivth-container .col-lg-3 img {
+      width: 100%;
+  }
+  .About > .fivth-container .col-lg-3 h4 {
+      font-family: Montserrat;
+      font-size: 20px;
+      font-weight: 800;
+      margin: 1vh auto;
+  }
+  .About > .fivth-container .col-lg-3 p {
+      font-family: Montserrat;
+      font-size: 14px;
+      font-weight: 700;
+      margin: 1vh;
+      color: #737373;
+  }
+
+  .About > .fivth-container .col-lg-3 .icons {
+      display: flex;
+      justify-content: space-around;
+      width: 60%;
+      margin: auto;
+  }
+
+  .About > .sixth-container {
+      margin: 50px auto;
+  }
+  .About > .sixth-container h1 {
+      font-family: Montserrat;
+      font-size: 40px;
+  }
+  .About > .sixth-container p {
+      font-family: Montserrat;
+      font-size: 16px;
+      font-weight: 400;
+      color: #737373;
+  }
+
+  .About > .seventh-container {
+      background: #f2bb2a;
+      margin: 50px 0vw !important;
+      padding: 20px 10px !important;
+  }
+  .About > .seventh-container > .container > .row > .col-lg-6 {
+      justify-content: start;
+      align-items: center;
+      margin: 30px 0px;
+  }
+  .About > .seventh-container > .container > .row > .col-lg-6 > div > h6 {
+      font-family: Poppins;
+      font-size: 16px;
+      font-weight: 800;
+      color: #8b4513;
+  }
+  .About > .seventh-container > .container > .row > .col-lg-6 > div > h1 {
+      font-family: Montserrat;
+      font-size: 30px;
+      font-weight: 800;
+      margin: 0vh 0vw;
+      color: #fff;
+  }
+  .About > .seventh-container > .container > .row > .col-lg-6 > div > p {
+      font-family: Montserrat;
+      font-size: 14px;
+      font-weight: 500;
+      color: #fff;
+      margin: 20px 0px;
+      line-height: 20px;
+  }
+  .About > .seventh-container > .container > .row > .col-lg-6 > div > a {
+      color: #fff;
+      border: 1px solid #fff;
+      padding: 1vh 3vw;
+      margin: 40px 0vw !important ;
+      border-radius: 5px;
+  }
+
+  .About > .seventh-container .img {
+      justify-content: space-between !important;
+  }
+
+  .About > .seventh-container > .container > .row > .col-lg-6 img {
+      width: auto;
+      height: 400px;
+  }
 }
