--- a/style-file/mobile.css
+++ b/style-file/mobile.css
@@ -445,6 +445,129 @@
       height: 350px;
   }
 
+/* -----------------------------Contact us ----------------------------- */
+.Contact>.first-container{
+  margin: 20px auto 50px auto;
+}
+.Contact>.first-container>.row>.col-lg-6{
+  align-items: center;
+margin: 3vh auto;
+}
+.Contact>.first-container>.row>.col-lg-6 >div>h5{
+  font-size: 20px;
+  font-weight: 700;
+  color: #ffc107;
+  font-family: Montserrat;
+  margin: 1vh 0vw;
+}
+.Contact>.first-container>.row>.col-lg-6 >div>h1{
+  color: #8b4513;
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 40px;
+  margin: 1vh 0vw;
+
+}
+.Contact>.first-container>.row>.col-lg-6 >div>p{
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  margin: 2vh 0vw;
+
+}
+.Contact>.first-container>.row>.col-lg-6 >div>h4{
+
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 30px;
+  
+  
+}
+.Contact>.first-container>.row>.col-lg-6 >div>h4>a{
+  color:#8b4513 ;
+  font-size: 16px;
+
+}
+.Contact>.first-container>.row>.col-lg-6 >div>.d-flex{
+  width: 70%;
+  margin: 3vh auto;
+}
+.Contact>.first-container>.row>.col-lg-6 >div>.d-flex>a{
+  color: #f2bb2a;
+  font-size: 30px;
+}
+.Contact>.second-container{
+  margin: 50px auto;
+}
+.Contact>.second-container>h5{
+  font-family: Poppins;
+font-size: 16px;
+font-weight: 700;
+line-height: 24px;
+letter-spacing: 0.20000000298023224px;
+text-align: center;
+color: #f2bb2a;
+
+}
+.Contact>.second-container>h1{
+ 
+font-family: Montserrat;
+font-size: 20px;
+font-weight: 700;
+letter-spacing: -2px;
+color: #252B42;
+
+
+}
+.Contact>.second-container>.row>.col-lg-3{
+  margin: 1vh auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5vh 1vw;
+}
+
+.Contact>.second-container>.row>.col-lg-3>div>i{
+  font-size: 50px;
+  color: #f2bb2a;
+  margin: 2vh auto;
+  
+}
+
+  .Contact>.third-container{
+    margin: 40px auto;
+  }
+  .Contact>.third-container>img{
+    width: 80px;
+  }
+  .Contact>.third-container>h5{
+
+font-family: Montserrat;
+font-size: 16px;
+font-weight: 700;
+color: #8B4513;
+margin: 2vh auto;
+line-height: -2px;
+
+  }
+  .Contact>.third-container> h1{
+
+font-family: Montserrat;
+font-size: 40px;
+font-weight: 700;
+color: #252B42;
+line-height: -2px;
+margin: 10px auto;
+  }
+  .Contact>.third-container a{
+    color: #fff;
+    background-color: #f2bb2a;
+    padding: 1vh 4vw;
+    margin-top:30px !important;
+    border-radius: 5px;
+  }
   /* -----------------------------Footer ----------------------------- */
   footer {
       background-image: linear-gradient(to top, #feba2b 93%, #fff 7%);
@@ -464,21 +587,21 @@
   }
   footer > .first-container-footer > .row > .col-lg-6 h1 {
       font-family: Poppins;
-      font-size: 30px;
-      font-weight: 600;
+      font-size: 25px;
+      font-weight: 600 !important;
       color: #fff;
   }
   footer > .first-container-footer > .row > .col-lg-6 form input {
       border: none;
       padding: 1vh 3vw;
-      width: 300px;
-      margin: 1vh 0vw;
+      width: 200px;
+      margin: 1vh auto ;
       border-radius: 30px;
   }
   footer > .first-container-footer > .row > .col-lg-6 form button {
       border: none;
       padding: 1vh 1vw;
-      width: 300px;
+      width: 200px;
       border-radius: 30px;
       background: #fff;
       color: #feba2a;
